// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithLimit /> by default matches with snapshot 1`] = `
<div
  className="text-input-with-limit__StyledTextInputWithLimit-ufrmmb-1 OpERo"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-limit__FocusTextInput-ufrmmb-0 cjHeAQ"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="text-input-with-limit__StyledCounter-ufrmmb-2 jBWfBa"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="text-input-with-limit__StyledTextInputWithLimit-ufrmmb-1 OpERo"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-limit__FocusTextInput-ufrmmb-0 cjHeAQ"
    defaultValue=""
    disabled={true}
    name="text"
    onChange={[Function]}
  />
  <div
    className="text-input-with-limit__StyledCounter-ufrmmb-2 kCeqRf"
    disabled={true}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`error\` prop matches with snapshot 1`] = `
<div
  className="text-input-with-limit__StyledTextInputWithLimit-ufrmmb-1 OpERo"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 kfptEQ text-input-with-limit__FocusTextInput-ufrmmb-0 fzFwMa"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="text-input-with-limit__StyledCounter-ufrmmb-2 jBWfBa"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`tiny\` prop matches with snapshot 1`] = `
<div
  className="text-input-with-limit__StyledTextInputWithLimit-ufrmmb-1 OpERo"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iXzQrK text-input-with-limit__FocusTextInput-ufrmmb-0 cjHeAQ"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="text-input-with-limit__StyledCounter-ufrmmb-2 jBWfBa"
    disabled={false}
  >
    80
  </div>
</div>
`;
